<resources>
    <string name="app_name">RetroShare</string>
	<string name="not_implemented_yet">Yet Another Not Implemented Yet</string>
    <string name="settings">Settings</string>
	<string name="terminate">Terminate</string>
	<string name="terminate_really">Do you really want to terminate RetroShare Android?</string>
    <string name="title_activity_main">RetroShare</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="edit">Edit</string>
	<string name="save">Save</string>
	<string name="title">Title:</string>
	<string name="delete">Delete</string>
    <string name="leave_lobby">Leave lobby</string>
	<string name="join_lobby">Join lobby</string>
	<string name="show_details">Show details</string>
    <string name="send_chat">send chat</string>
    <string name="insert_message_here">insert message here</string>
    <string name="peers">peers</string>
    <string name="chat">chat</string>
    <string name="chat_lobbies">chat lobbies</string>
    <string name="add_friend">Add Friends</string>
	<string name="add_as_friend">Add as Friend</string>
	<string name="from_known_peers">From Known Peers</string>
	<string name="from_qr_code">Show QR Code</string>
    <string name="hostname">hostname</string>
    <string name="port">port</string>
    <string name="user">user</string>
	<string name="reset_password">Reset Password</string>
	<string name="reset_ssh_key">Reset Server SSH hostkey</string>
	<string name="server_key_not_available">server key not available</string>
    <string name="password">password</string>
    <string name="error">error</string>
	<string name="unknown_error">Unknown Error</string>
    <string name="err_unknown_host">could not get ip for  this hostname</string>
    <string name="err_no_route_to_host">could not contact server. maybe you are not connected to a network.</string>
    <string name="err_connection_refused">host refused connection: ip or port wrong or server not running</string>
    <string name="err_bad_signature">the servers public is not the same as last time</string>
    <string name="err_auth_failed">ssh authentification failed: wrong  user or password</string>
    <string name="err_send">error while sending</string>
    <string name="err_receive">error while receiving</string>
    <string name="block_friend">Remove from Friends</string>
    <string name="system_status">(TODO) system status</string>
    <string name="connection_error">connection error</string>
    <string name="connected">connected</string>
    <string name="not_connected">not connected</string>
    <string name="new_message">New message</string>
    <string name="new_private_chat_message">new private message</string>
    <string name="new_lobby_chat_message">new lobby message</string>
	<string name="_public">Public</string>
	<string name="_private">Private</string>
	<string name="from">from</string>
    <string name="topic">Topic:</string>
	<string name="privacy">Privacy:</string>
	<string name="participants">Participants:</string>
    <string name="bandwidth_up_down">bandwidth up/down</string>
    <string name="network_status">network status</string>
    <string name="files">files</string>
    <string-array name="file_actions">
        <item >continue</item>
        <item >wait</item>
        <item >pause</item>
        <item >restart</item>
        <item >check</item>
        <item >cancel</item>
        <item >show link as qrcode</item>
    </string-array>
    <string name="filename">filename:</string>
    <string name="size">size:</string>
    <string name="hash">hash:</string>
    <string name="download">download</string>
    <string name="rate">rate:</string>
    <string name="search">search</string>
    <string name="select_server">select server/account</string>
    <string name="show_password">" show password"</string>
    <string name="save_password">save password</string>
    <string name="new_server">new server..</string>
    <string name="add">add</string>
    <string name="enter_ssh_password">enter ssh password</string>
    <string name="arbitrary_name">arbitrary name</string>
    <string name="ssh_username">ssh username</string>
    <string name="ssh_port">ssh port</string>
    <string name="new_retroshare_nogui_server">new retroshare-nogui server</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="do_you_want_delete_server">Do you really want to delete this server?</string>

    
    <!-- Authenticator BEGIN -->
    <string name="ACCOUNT_TYPE">org.retroshare.android</string>
	<string name="authenticator_label">RetroShare Account</string>
    <string name="authenticator_activity_localname_summary">Chose between available RetroShare account to enable sync</string>
    <string name="authenticator_activity_localname_label">Account Local Name</string>
    <string name="authenticator_activity_accounts_not_selected_title">No Account Selected</string>
    <string name="authenticator_activity_accounts_not_selected_message">You should select an account to register or create another RetroShare account if no one is available before adding it for sync</string>
    <string name="authenticator_preference_category_server">Server Settings</string>
    <!-- Authenticator END -->

	<!-- Contact Sync Provider BEGIN  -->
	<string name="retroshare_im_custom_proto">retroshare</string>
	<!-- Contact Sync Provider END  -->

	<!-- RetroShare Android Proxy BEGIN-->
	<string name="add_server">Add Server</string>
	<string name="server_saved">Server saved</string>
	<string name="server_deleted">Server deleted</string>
	<string name="missing_input">Please fill in all fields.</string>
	<string name="login">Login</string>
	<string name="connecting_to">Connecting to </string>
	<string name="connecting_to_rsproxy">Connecting to Service</string>
	<!-- RetroShare Android Proxy END-->

	<!-- RetroShare QR Code BEGIN -->
	<string name="retroshare_uri_scheme">retroshare</string>
	<string name="person_uri_authority">person</string>
	<string name="hash_uri_query_param">hash</string>
	<string name="name_uri_query_param">name</string>
	<!-- RetroShare QR Code END -->
</resources>