<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher" />

		<Spinner
				android:id="@+id/serverSpinner"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onConnectButtonPressed"
                android:text="@string/connect" />
            <Button
                    android:id="@+id/buttonDisconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onDisconnectButtonPressed"
                    android:text="@string/disconnect" />
            <Button
                    android:id="@+id/buttonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onEditButtonPressed"
                    android:text="@string/edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <View
                android:id="@+id/View03"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@android:drawable/divider_horizontal_bright" />


            <LinearLayout
                    android:id="@+id/chatLobbiesClickContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showChatLobbies" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/irc_protocol" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/chat_lobbies"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@android:drawable/divider_horizontal_bright" />


			<LinearLayout	android:id="@+id/peersClickContainer"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:onClick="showPeers" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/groupevent" />


                <TextView
					android:id="@+id/peersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/peers"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@android:drawable/divider_horizontal_bright" />


            <LinearLayout
                android:id="@+id/filesClickContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showFilesActivity" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/files" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/files"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@android:drawable/divider_horizontal_bright" />


            <LinearLayout
                    android:id="@+id/searchClickContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showSearchActivity" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/search" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/search"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </LinearLayout>

		<TextView
				android:id="@+id/textViewNetStatus"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:text="@string/network_status" />

		<TextView
				android:id="@+id/textViewBandwidth"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:text="@string/bandwidth_up_down" />

	</LinearLayout>

</ScrollView>