<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filename"
        android:textAppearance="?android:attr/textAppearanceLarge" />



    <TextView
        android:id="@+id/textViewFileName_DownloadActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="myfilename.ext"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textAppearance="?android:attr/textAppearanceLarge" />



    <TextView
        android:id="@+id/textViewFileSize_DownloadActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100kB"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hash"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <TextView
        android:id="@+id/textViewFileHash_DownloadActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="asdfghjkl"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewResult_DownloadActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ok or not ok"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <FrameLayout
            android:layout_width="fill_parent" android:layout_height="fill_parent"
            android:layout_weight="1">
    </FrameLayout>

    <!-- content fixated to the bottom of the screen -->
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <Button
                android:id="@+id/buttonDownload_DownloadActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onButtonDownloadClick"
                android:text="@string/download" />
    </LinearLayout>





</LinearLayout>